<resources>
    <!----><!--Font family: Roboto Line height: 16sp -->

    <string name="app_name">My Application</string>

    <!-- *** LOGIN *** -->
    <string name="logo">SOS.inf</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueceu_a_">Esqueceu a senha?</string>

    <!-- *** TELA PRINCIPAL - APENAS DESENHO *** -->

    <string name="atendente">Atendente</string>
    <string name="abertura_">Abertura:</string>
    <string name="assunto">Assunto</string>
    <string name="funcionario">LETICIA PIAZ REICHARDT</string>
    <string name="letrasINI_func">LP</string>
    <string name="posto">Francisco Telman</string>
    <string name="atender">ATENDER</string>
    <!-- strings do menu de cima-->
    <string name="abertos">Abertos</string>
    <string name="todos">Todos</string>
    <string name="andamento">Andamento</string>
    <string name="atendidos">Atendidos</string>
    <string name="chamados">Chamados</string>

    <!-- strings do menu de baixo-->
    <string name="do_posto">Posto</string>
    <string name="meus">Meus</string>

<!-- -->
    <string name="novo_chamad">

        Novo chamado
    </string>
    <!-- STYLES -->
    <style name="atendente">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="abertura_">
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">@color/verde_claro_azulado_1</item>
    </style>

    <style name="assunto">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="funcionario">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <style name="letrasINI_func">
        <item name="android:textSize">30sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="posto">
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">@color/white</item>
    </style>

    <style name="atender">
        <item name="android:textSize">14sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>
    <!-- Styles do menu de cima -->
    <style name="abertos">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="todos">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="andamento">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="atendidos">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="chamados">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>
    <!-- strings do menu de baixo-->
    <style name="do_posto">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>

    <style name="meus">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#A4E5C2</item>
    </style>


    <!-- TELA PRINCIPAL-->
    <string name="title_activity_tela_principal">Tela_principal</string>

    <!-- MENU LATERAL-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--ITEMS MENU-->
    <string name="menu_home">HOME</string>
    <string name="menu_configuracoes">CONFIGURAÇÕES</string>
    <string name="menu_outros_filtros">OUTROS FILTROS</string>
    <string name="menu_informacoes">INFORMAÕES</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_principal">MainActivity</string>
    <string name="title_notifications">Notifications</string>

</resources>