<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_configuracoes"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_configuracoes"
        tools:layout="@layout/fragment_configuracoes" />

    <fragment
        android:id="@+id/nav_outros_filtros"
        android:label="@string/menu_outros_filtros"
        tools:layout="@layout/fragment_outros_filtros" />

    <fragment
        android:id="@+id/nav_informacoes"
        android:label="@string/menu_informacoes"
        tools:layout="@layout/fragment_informacoes" />
</navigation>