<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_escuro2">

    <ImageView
        android:id="@+id/fones_de_ou"
        android:layout_width="283dp"
        android:layout_height="217dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edt_login"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/login"
        android:textColorHint="@color/verde_claro_azulado_2"
        android:textAppearance="@style/login"
        android:layout_marginStart="40dp"
        android:padding="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350dp"
        android:background="@drawable/edt_custom"
        />

    <EditText
        android:id="@+id/edt_senha"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:hint="@string/senha"
        android:textColorHint="@color/verde_claro_azulado_2"
        android:textAppearance="@style/login"
        android:padding="16dp"
        android:layout_marginStart="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="430dp"
        android:background="@drawable/edt_custom"
        />

    <ImageButton
        android:id="@+id/btn_entrar"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="130dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="530dp"
        android:background="@color/verde_escuro3"
        />

    <TextView
        android:id="@+id/entrar"
        android:layout_width="80dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="540dp"
        android:text="@string/entrar"
        android:textAppearance="@style/entrar"
        android:gravity="center"
        />

    <ImageButton
        android:id="@+id/btn_esqueceu_a_"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="650dp"
        android:background="@color/verde_escuro2"
        />

    <TextView
        android:id="@+id/esqueceu_a_"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="650dp"
        android:text="@string/esqueceu_a_"
        android:textAppearance="@style/esqueceu_a_"
        android:gravity="top"
        />

</RelativeLayout>