<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/verde_escuro">

<!-- MENU SUPERIOR -->
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="450dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/menu_superior" />

    <!-- Botão da barra lateral -->
    <View
        android:id="@+id/bot_o_da_ba"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginStart="29dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/botao_menu_lateral"
        />

    <TextView
        android:id="@+id/chamados"
        android:layout_width="97dp"
        android:layout_height="23dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:text="@string/chamados"
        android:textAppearance="@style/chamados"
        android:gravity="top"
        />

    <View
        android:id="@+id/line_1"
        android:layout_width="370dp"
        android:layout_height="2dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@drawable/line_div_menu"
        />


    <!-- COMEÇO DO CONTEUDO -->

    <View
        android:id="@+id/rectangle_1_1"
        android:layout_width="366dp"
        android:layout_height="190dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="133dp"
        android:background="@drawable/chamado_aberto" />

    <View
        android:id="@+id/rectangle_1_2"
        android:layout_width="366dp"
        android:layout_height="191dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="341dp"
        android:background="@drawable/chamado_em_andamento" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="366dp"
        android:layout_height="191dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="551dp"
        android:background="@drawable/chamado_resolvido" />

    <TextView
        android:id="@+id/abertura_1"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="296dp"
        android:gravity="center_vertical"
        android:text="@string/abertura_"
        android:textAppearance="@style/abertura_" />

    <TextView
        android:id="@+id/atendente1"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="255dp"
        android:gravity="top"
        android:text="@string/atendente"
        android:textAppearance="@style/atendente" />

    <TextView
        android:id="@+id/assunto1"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="226dp"
        android:gravity="top"
        android:text="@string/assunto"
        android:textAppearance="@style/assunto" />

    <TextView
        android:id="@+id/funcionario1"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="145dp"
        android:gravity="top"
        android:text="@string/funcionario"
        android:textAppearance="@style/funcionario" />

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="77dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="142dp"
        android:background="@drawable/ellipse_1" />

    <TextView
        android:id="@+id/letrasINI_func"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="160dp"
        android:gravity="top"
        android:text="@string/letrasINI_func"
        android:textAppearance="@style/letrasINI_func" />

    <RelativeLayout
        android:id="@+id/bot_o_para_"
        android:layout_width="59dp"
        android:layout_height="57dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="339dp"
        android:layout_marginTop="593dp"
        android:background="@drawable/btn_chamado" />

    <TextView
        android:id="@+id/posto1"
        android:layout_width="130dp"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="169dp"
        android:gravity="top"
        android:text="@string/posto"
        android:textAppearance="@style/posto" />

    <TextView
        android:id="@+id/abertura_"
        android:layout_width="58dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="41dp"
        android:layout_marginTop="508dp"
        android:gravity="center_vertical"
        android:text="@string/abertura_"
        android:textAppearance="@style/abertura_" />

    <TextView
        android:id="@+id/atendente"
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="47dp"
        android:layout_marginTop="464dp"
        android:gravity="top"
        android:text="@string/atendente"
        android:textAppearance="@style/atendente" />

    <TextView
        android:id="@+id/assunto"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="435dp"
        android:gravity="top"
        android:text="@string/assunto"
        android:textAppearance="@style/assunto" />

    <TextView
        android:id="@+id/funcionario2"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="354dp"
        android:gravity="top"
        android:text="@string/funcionario"
        android:textAppearance="@style/funcionario" />

    <View
        android:id="@+id/ellipse_4"
        android:layout_width="77dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="351dp"
        android:background="@drawable/ellipse_1" />

    <TextView
        android:id="@+id/letrasINI_func2"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="369dp"
        android:gravity="top"
        android:text="@string/letrasINI_func"
        android:textAppearance="@style/letrasINI_func" />

    <TextView
        android:id="@+id/antonio_bos"
        android:layout_width="99dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="169dp"
        android:layout_marginTop="377dp"
        android:gravity="top"
        android:text="@string/posto"
        android:textAppearance="@style/posto" />

    <TextView
        android:id="@+id/leticia_pia"
        android:layout_width="186dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="130dp"
        android:layout_marginTop="566dp"
        android:gravity="top"
        android:text="@string/funcionario"
        android:textAppearance="@style/funcionario" />

    <View
        android:id="@+id/ellipse_5"
        android:layout_width="77dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="563dp"
        android:background="@drawable/ellipse_1" />

    <TextView
        android:id="@+id/lp"
        android:layout_width="36dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="581dp"
        android:gravity="top"
        android:text="@string/letrasINI_func"
        android:textAppearance="@style/letrasINI_func" />

    <TextView
        android:id="@+id/francisco_t"
        android:layout_width="130dp"
        android:layout_height="19dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="590dp"
        android:gravity="top"
        android:text="@string/posto"
        android:textAppearance="@style/posto" />

    <View
        android:id="@+id/btn_atender"
        android:layout_width="109dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="248dp"
        android:layout_marginTop="282dp"
        android:background="@drawable/btn_atender" />

    <TextView
        android:id="@+id/atender2"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="286dp"
        android:gravity="center_vertical"
        android:text="@string/atender"
        android:textAppearance="@style/atender" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="109dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="248dp"
        android:layout_marginTop="495dp"
        android:background="@drawable/btn_atender" />

    <TextView
        android:id="@+id/atender"
        android:layout_width="61dp"
        android:layout_height="16dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="275dp"
        android:layout_marginTop="499dp"
        android:gravity="center_vertical"
        android:text="@string/atender"
        android:textAppearance="@style/atender" />

    <View
        android:id="@+id/lupa_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="332dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/lupa" />

    <View
        android:id="@+id/status_1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="248dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/status" />

    <View
        android:id="@+id/receptor_de"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="62dp"
        android:background="@drawable/receptor_de_telefone" />

    <View
        android:id="@+id/telefone_ch"
        android:layout_width="35dp"
        android:layout_height="31.29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="144dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/telefone_chamando" />

    <TextView
        android:id="@+id/abertos"
        android:layout_width="53dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="95dp"
        android:gravity="top"
        android:text="@string/abertos"
        android:textAppearance="@style/abertos" />

    <TextView
        android:id="@+id/todos"
        android:layout_width="42dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="328dp"
        android:layout_marginTop="95dp"
        android:gravity="top"
        android:text="@string/todos"
        android:textAppearance="@style/todos" />

    <TextView
        android:id="@+id/andamento"
        android:layout_width="78dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="123dp"
        android:layout_marginTop="95dp"
        android:gravity="top"
        android:text="@string/andamento"
        android:textAppearance="@style/andamento" />

    <TextView
        android:id="@+id/atendidos"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="228dp"
        android:layout_marginTop="95dp"
        android:gravity="top"
        android:text="@string/atendidos"
        android:textAppearance="@style/atendidos" />

    <View
        android:id="@+id/line_5"
        android:layout_width="102dp"
        android:layout_height="0dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="302dp"
        android:layout_marginTop="119dp"
        android:background="@drawable/line_menu_superior" />

    <!-- MENU INFERIOR -->
    <View
        android:id="@+id/rectangle_inferior"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="660dp"
        android:background="@drawable/menu_inferior" />

    <View
        android:id="@+id/perfil_2"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="273dp"
        android:layout_marginTop="675dp"
        android:background="@drawable/perfil" />

    <View
        android:id="@+id/casa_1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="79dp"
        android:layout_marginTop="675dp"
        android:background="@drawable/casa" />

    <TextView
        android:id="@+id/do_posto"
        android:layout_width="52dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="66dp"
        android:layout_marginTop="695dp"
        android:gravity="top"
        android:text="@string/do_posto"
        android:textAppearance="@style/do_posto" />

    <TextView
        android:id="@+id/meus"
        android:layout_width="50dp"
        android:layout_height="23dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="259dp"
        android:layout_marginTop="695dp"
        android:gravity="top"
        android:text="@string/meus"
        android:textAppearance="@style/meus" />

</RelativeLayout>